# loopr-sh

./: .gitignore  AGENTS.md  Cargo.toml  Loopr.md  Makefile  README.md  embedded_skills.go  go.mod  justfile
claude-skills/: README.md
docs/: loopr-loop-spec.md
specs/: feature-build-tooling-task-01-test-01.md  feature-build-tooling-task-01-test-02.md  feature-build-tooling-task-01.md  feature-build-tooling.md  feature-cli-core-task-01-test-01.md  feature-cli-core-task-01-test-02.md  feature-cli-core-task-01-test-03.md  feature-cli-core-task-01.md  feature-cli-core-task-02-test-01.md  feature-cli-core-task-02-test-02.md  feature-cli-core-task-02.md  feature-cli-core.md  feature-codex-wrapper-task-01-test-01.md  feature-codex-wrapper-task-01-test-02.md  feature-codex-wrapper-task-01-test-03.md  feature-codex-wrapper-task-01-test-04.md  feature-codex-wrapper-task-01.md  feature-codex-wrapper.md  feature-decision-log-task-01-test-01.md  feature-decision-log-task-01-test-02.md  feature-decision-log-task-01.md  feature-decision-log.md  feature-order.yaml  feature-skill-doctor-task-01-test-01.md  feature-skill-doctor-task-01-test-02.md  feature-skill-doctor-task-01.md  feature-skill-doctor-task-02-test-01.md  feature-skill-doctor-task-02.md  feature-skill-doctor.md  feature-skill-install-task-01-test-01.md  feature-skill-install-task-01-test-02.md  feature-skill-install-task-01.md  feature-skill-install-task-02-test-01.md  feature-skill-install-task-02-test-02.md  feature-skill-install-task-02.md  feature-skill-install.md  implementation-progress.md  prd.md  spec.md  (+2 more)
(+153 files in other folders)
