[package]
name = "loopr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
getrandom = "0.3.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
time = { version = "0.3.46", features = ["formatting", "macros"] }
